--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -29,17 +29,9 @@
   name = "github.com/aws/aws-sdk-go"
   version = "1.28.9"
 
-[[override]]
+[[constraint]]
   name = "github.com/urfave/cli"
   version = "1.22.2"
-
-[[override]]
-  name = "github.com/cpuguy83/go-md2man"
-  version = "1.0.10"
-
-[[override]]
-  name = "github.com/russross/blackfriday"
-  version = "1.5.2"
 
 [[constraint]]
   name = "github.com/getsentry/raven-go"
